fixed nav overflow, search on first page, search input styling updated

--- a/src/styles/_content_page.scss
+++ b/src/styles/_content_page.scss
@@ -1,15 +1,26 @@
 // article page
-.search-input-box {
-  background: $section_bg;
-  padding: 7px;
-  border: none;
+.search-input-box-container {
   width: 100%;
   height: 47px;
-  text-align: center;
-  margin-bottom: 1px;
-  font-size: 34px;
-  line-height: 1.3;
-  letter-spacing: 0.139em;
+  margin-bottom: 10px;
+  display: flex;
+  .search-input-box {
+    background: $section_bg;
+    padding: 7px;
+    border: none;
+    height: 100%;
+    text-align: center;
+    border-radius: 10px;
+    width: 375px;
+    max-width: 80vw;
+    font-size: 34px;
+    line-height: 1.3;
+    letter-spacing: 0.139em;
+    margin: auto 40px auto auto;
+    @media(max-width: 500px) {
+      margin: auto;
+    }
+  }
 }
 .article-container {
   position: relative;
