--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -71,6 +71,7 @@ nav {
     padding-left: auto;
     li {
       margin: auto;
+      padding-right: 60px;
       a {
         text-decoration: none;
         color: $primary_text_color;
